--- a/app/src/main/res/layout/move_detail_layout.xml
+++ b/app/src/main/res/layout/move_detail_layout.xml
@@ -74,7 +74,7 @@
                 android:orientation="vertical"
                 android:layout_marginBottom="2dp">
 
-                <fd3s.framedata3s.views.HitBoxImageView
+                <fd3s.framedata.views.HitBoxImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
